# dinner-solved

./: .gitignore  LOCAL_DEV.md  README.md  dinner-solved-brief.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/src/api/: converters.py  dependencies.py  main.py  rate_limiter.py
api/src/api/routers/: auth.py  grocery.py  household.py  plan.py  preferences.py  recipes.py  template.py
api/src/api/schemas/: grocery.py  household.py  plan.py  preferences.py  recipe.py
api/src/application/ports/: ai_port.py  export_port.py
api/src/application/use_cases/: build_grocery_list.py  confirm_plan.py  create_recipe.py  delete_recipe.py  full_update_recipe.py  generate_instructions.py  get_recipe.py  import_recipe.py  list_recipes.py  manage_household.py  manage_template.py  refine_recipes.py  suggest_recipes.py  toggle_favorite.py  update_recipe.py
api/src/domain/entities/: grocery.py  household.py  meal_plan.py  preferences.py  recipe.py
api/src/domain/repositories/: household_repository.py  meal_plan_repository.py  preference_repository.py  recipe_repository.py
api/src/domain/services/: grocery_list_service.py  meal_plan_service.py  serving_calculator.py
api/tests/unit/: fakes.py  test_build_grocery_list.py  test_confirm_plan.py  test_grocery_list_service.py  test_manage_household.py  test_manage_template.py  test_rate_limiter.py  test_recipe_history.py  test_recipe_import.py  test_refine_recipes.py  test_serving_calculator.py  test_suggest_recipes.py
(+63 files in other folders)
